# exxon-boothcathon

./: .gitignore  pyproject.toml
analysis/: .gitignore  EDA.ipynb  EDA_MER.ipynb  main.ipynb  pyproject.toml
analysis/notebook/: EDA_MER.ipynb  GoogleMapAPI.ipynb  MER_cleaning.ipynb  MRW_cleaning.ipynb  cleaning.ipynb  sampleEDA_MER.ipynb
infra/: Makefile  README.md  backend.tf  main.tf  providers.tf  terraform.tf  variable.tf
infra/bq_table_schema/: mer.json  mrw.json
infra/configs/: terragrunt.hcl
infra/modules/bigquery/dataset/: main.tf  variable.tf
infra/modules/bigquery/table/: main.tf  variable.tf
infra/modules/sa/: README.md  main.tf  variable.tf
workshop/: Lab1-0.ipynb  Lab1-1.ipynb  Lab1-2.ipynb  pyproject.toml  validate_env.ipynb
workshop/answer/: Lab1-0.ipynb  Lab1-1.ipynb  Lab1-2.ipynb
