[tool.poetry]
name = "exxon-mobile-bootcathon"
version = "0.1.0"
description = ""
authors = ["RTae <natthanan.bhu@doctorasa.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
