[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["RTae <natthanan.bhu@doctorasa.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
