[tool.poetry]
name = "exxon-mobile-bootcathon"
version = "0.1.0"
description = ""
authors = ["RTae <natthanan.bhu@doctorasa.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.0"
scipy = "^1.14.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
